feat: Enhance activity service with new features and improvements
- Added advanced search functionality for activities with multiple filters.
- Implemented new endpoints for AI recommendations and activity statistics.
- Updated security configurations to improve access control and error handling.
- Refactored activity repository to include new query methods for fetching activities.
- Introduced new DTOs for department and system statistics.
- Enhanced Kafka event handling for activity notifications and deletions.
- Updated Docker and Maven configurations for improved service health checks and dependency management.